:lipstick: Fix gap for small mobile

--- a/src/components/Game/game.module.scss
+++ b/src/components/Game/game.module.scss
@@ -10,9 +10,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
   padding: $gap-l;
   z-index: 4;
+
+  @include mobile {
+    gap: 2rem;
+  }
 
   @include tablet {
     gap: 3rem;
